objects/Contact.object
<CustomObject><fields>
<fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture/Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics/Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black Affinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Social Responsibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneurship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Initiatives/Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraternity and Sorority Life (FSL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBTQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirituality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women in Business</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>January__c</fullName>
        <label>Jan</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>July__c</fullName>
        <label>Jul</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>June__c</fullName>
        <label>Jun</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Event_Attended__c</fullName>
        <label>Last Event Attended</label>
        <length>110</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Year_President_Society_Status__c</fullName>
        <label>Last Year with President Society Status</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Legacy_Lynx_Id__c</fullName>
        <description>Unique key from Lynx</description>
        <externalId>true</externalId>
        <label>Legacy Lynx Id</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Lifetime_Total__c</fullName>
        <label>Lifetime Commitments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>LinkedIn_Interests__c</fullName>
        <label>LinkedIn Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields><fields>
        <fullName>LinkedinKey__c</fullName>
        <label>LinkedinKey</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Linkedin_Sync_Time_Stamp__c</fullName>
        <label>Linkedin Sync Time Stamp</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>March__c</fullName>
        <label>Mar</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>May__c</fullName>
        <label>May</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Mille_ModDate__c</fullName>
        <label>Mille ModDate</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Most_Recent_Gift_Amount__c</fullName>
        <label>Most Recent Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Most_Recent_Gift_Date__c</fullName>
        <label>Most Recent Gift Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Most_Recent_Gift_Fund__c</fullName>
        <label>Most Recent Gift Fund</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>November__c</fullName>
        <label>Nov</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>October__c</fullName>
        <label>Oct</label>
        <picklist>
            <picklistValues>
                <fullName>Home 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Part_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Time</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Past_Position_Primary_Job__c</fullName>
        <label>Past Position (Primary Job)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Past_Position_Secondary_Job__c</fullName>
        <label>Past Position (Secondary Job)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Past_Position_Tertiary_Job__c</fullName>
        <label>Past Position (Tertiary Job)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Preferred_Email_Type__c</fullName>
        <label>Preferred Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Preferred_Mailing_Address__c</fullName>
        <label>Preferred Mailing Address</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Preferred_Salutation__c</fullName>
        <inlineHelpText>Do people recognize you by a nickname? Include it here and it will added to your full profile name.</inlineHelpText>
        <label>Salutation (Nickname)</label>
        <length>110</length>
        <type>Text</type>
    </fields><fields>
        <fullName>President_Society_Member__c</fullName>
        <label>President Society Member</label>
        <length>65</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Academic Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Academic_Program_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department Members</relationshipLabel>
        <relationshipName>Department_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Members</relationshipLabel>
        <relationshipName>Institution_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Sports_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sports Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Members</relationshipLabel>
        <relationshipName>Sport_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Profile_Completeness_Field10__c</fullName>
        <description>Instagram</description>
        <formula>IF(ISBLANK( Instagram__c  ), 0, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Instagram</inlineHelpText>
        <label>Profile Completeness Field10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Profile_Completeness_Field11__c</fullName>
        <description>Blog</description>
        <formula>IF(ISBLANK( Blog__c  ), 0, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Blog</inlineHelpText>
        <label>Profile Completeness Field11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Profile_Completeness_Field12__c</fullName>
        <description>Other</description>
        <formula>IF(ISBLANK( Other__c  ), 0, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Other</inlineHelpText>
        <label>Profile Completeness Field12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Profile_Completeness_Total__c</fullName>
        <formula>Profile_Completeness_Field1__c 
+ 
Profile_Completeness_Field2__c 
+ 
Profile_Completeness_Field3__c
+ 
Profile_Completeness_Field4__c
+ 
Profile_Completeness_Field5__c
+ 
Profile_Completeness_Field6__c
+ 
Profile_Completeness_Field7__c
+ 
Profile_Completeness_Field8__c
+ 
Profile_Completeness_Field9__c
+ 
Profile_Completeness_Field10__c
+ 
Profile_Completeness_Field11__c
+ 
Profile_Completeness_Field12__c
+ 
Profile_Completeness_Field13__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Completeness Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Blended Learning MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fast Track MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time One Year MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time Two Year MBA Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA Full Time International Concentration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM Global Entrepreneurship Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM in Entrepreneurship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSM in Technical Entrepreneurship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Advanced Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Public_Affiliation_Display_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Affiliation Display Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Affiliation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Affiliation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Affinities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Affinities</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Alternate_Email_2_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Alternate Email 2 Type</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Alternate_Email_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Alternate Email 2</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Alternate_Email_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Alternate Email Type</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Alumni_Directory_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Alumni Directory Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Associations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Associations</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Babson_Affinities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Babson Affinities</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Birth_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Birth Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Blog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Blog</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Business_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Business - Address</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Business_City__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Business - City</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Business_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Business - Country</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Business_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Business - Phone</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Business_Postal_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Business - Postal Code</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Business_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Business - State</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Certificate_Degree_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Certificate Degree Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Certificate_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Certificate Degree</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Certificate_Preferred_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Certificate Preferred Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Certificate_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Certificate Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Certifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Certifications</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_CompanyName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Company Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Company_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Company Location</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Constituency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Constituency</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Contact_me_about__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Contact Me About</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Current_Share_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Current Share Item</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Degree</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Donor_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Donor Status</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Email</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Facebook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facebook</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_FirstName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public First Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_First_Alumni_Club__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public First Alumni Club</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Fiscal_Year_2013__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Fiscal Year - 2013</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Fiscal_Year_2014__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Fiscal Year - 2014</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Fiscal_Year_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Fiscal Year - 2015</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Following__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Following</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Function__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public Function</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Graduate_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Graduate Degree</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Graduate_Preferred_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Graduate Preferred Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Graduate_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Graduate Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Graduate_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Graduate Year</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Headline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Headline</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Home_Town_City__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Home Town City</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Home_Town_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Home Town Country</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Home_Town_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Home Town State</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Household_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Household ID</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Industry</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Instagram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Instagram</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Interests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Interests</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Languages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Languages</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_LastName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public LastName</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_LastYear_President_Society_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public LastYear President Society Status</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Last_Event_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Last Event Attended</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Level__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public Level</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Lifetime_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Lifetime Total</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_LinkedIn_Interests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public LinkedIn Interests</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_LinkedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public LinkedIn</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_MailingCity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Mailing City</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_MailingCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Mailing Country</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_MailingPostalCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Mailing Postal Code</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_MailingState__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Mailing State/Province</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_MailingStreet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public MailingStreet</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Middle_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Middle Name</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_MobilePhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Mobile Phone</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Most_Recent_Gift_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Most Recent Gift Amount</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Most_Recent_Gift_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Most Recent Gift Date</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Most_Recent_Gift_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Most Recent Gift Fund</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Part_Time__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public Part Time</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Past_Position_Primary_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Past Position (Primary Job)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Past_Position_Secondary_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Past Position (Secondary Job)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Past_Position_Tertiary_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Past Position (Tertiary Job)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Phone</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Preferred_Email_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Preferred Email Type</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Preferred_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Preferred Email</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Preferred_Mailing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Preferred Mailing Address</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Preferred_Salutation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Preferred Salutation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_President_Society_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public President Society Member</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Reason_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Reason Comment</label>
        <type>Checkbox</type>
    </fields>    </validationRules></CustomObject>